--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+*{
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.btn{
+  background: rgb(60, 233, 169);
+  padding: 4px 10px;
+  border-radius: 5px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn2{
+  border: 1px solid white;
+  border-radius: 5px;
+  padding: 2px 8px;
+
+}
+
+.active{
+  color: white;
+}
+
+.custom-table {
+  border: 1px solid #000;
+}
+
+.custom-header {
+  background-color: lightgray;
+  text-align: left; /* Align header text to the left */
+}
+
+.custom-cell {
+  text-align: left; /* Align cell text to the left */
+}
+
+thead{
+  border: 1px solid gray;
+  text-align: center;
+}
+table{
+  margin: 2px auto;
+  text-align: center;
 }
